# rusth

./: .gitignore  Cargo.toml  NOTICE  README.md
src/: main.rs
src/parser/: lexer.rs  mod.rs  parser.rs
src/runner/: builtin.rs  command.rs  executable.rs  mod.rs
src/runner/windows/: dir.rs  mod.rs
src/util/: history.rs  mod.rs  prompt.rs
